--- a/home.html
+++ b/home.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vertical Layout</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+    }
+    .container {
+        display: flex;
+        height: 100vh;
+    }
+    .section {
+        padding: 20px;
+        box-sizing: border-box;
+        border-right: 1px solid #ccc;
+    }
+    .section:last-child {
+        border-right: none;
+    }
+    .navigation {
+        flex: 1;
+        width: 200px;
+    }
+    .main-page {
+        flex: 2;
+        width: 400px;
+    }
+    .other-info {
+        flex: 1;
+        width: 300px;
+    }
+
+    /* .section-divider {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #ccc;
+    } */
+</style>
 </head>
 <body>
-    <div class="fixed-grid has-4-cols">
-        <div class="grid">
-          <div class="cell is-primary" style="background-color: aqua;">Cell 1</div>
-          <div class="cell is-col-span-2 panel-block">Cell 2</div>
-          <div class="cell">Cell 3</div>
+    <div class="container">
+        <div class="section navigation">
+            <h2>Navigation</h2>
         </div>
-      </div>
+        <div class="section main-page">
+            <h2>Main Page</h2>
+            <div style="border-top: 1px solid #ccc; margin: 0;"></div>
+        </div>
+        <div class="section other-info">
+            <h2>Other Info</h2>
+        </div>
+    </div>
 </body>
 </html>
