--- a/home.html
+++ b/home.html
@@ -1,62 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vertical Layout</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-    }
-    .container {
-        display: flex;
-        height: 100vh;
-    }
-    .section {
-        padding: 20px;
-        box-sizing: border-box;
-        border-right: 1px solid #ccc;
-    }
-    .section:last-child {
-        border-right: none;
-    }
-    .navigation {
-        flex: 1;
-        width: 200px;
-    }
-    .main-page {
-        flex: 2;
-        width: 400px;
-    }
-    .other-info {
-        flex: 1;
-        width: 300px;
-    }
 
-    /* .section-divider {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: #ccc;
-    } */
-</style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
+
 <body>
-    <div class="container">
-        <div class="section navigation">
-            <h2>Navigation</h2>
-        </div>
-        <div class="section main-page">
-            <h2>Main Page</h2>
-            <div style="border-top: 1px solid #ccc; margin: 0;"></div>
-        </div>
-        <div class="section other-info">
-            <h2>Other Info</h2>
-        </div>
+  <div class="flex h-screen overflow-hidden">
+    <div class="flex-none w-80 border-r border-gray-300">
+      <ul class="menu text-2xl place-content-center pt-5">
+        <li>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+            </svg>
+            Homepage
+          </a>
+        </li>
+        <li>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            Search
+          </a>
+        </li>
+        <li>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+            </svg>
+            Create
+          </a>
+        </li>
+      </ul>
     </div>
+    <div class="flex-auto">
+      <div class="navbar bg-base-100 border-b border-gray-300">
+        <a class="btn btn-ghost text-lg">Homepage</a>
+      </div>
+
+      <div class="overflow-auto h-dvh scrollbar-hide">
+
+        <div class="w-fit px-5 border-b border-gray-300">
+          <div class="card-body">
+            <div class="avatar">
+              <div class="w-12 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+              </div>
+              <h2 class="card-title px-5">Cat - <span class="text-gray-600">3h</span></h2>
+            </div>
+            <p>If a dog chews shoes whose shoes does he choose?</p>
+          </div>
+          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+          </figure>
+          <div class="btm-nav relative card-action">
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
+            </button>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            </button>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+            </button>
+          </div>
+        </div>
+
+        <div class="w-fit px-5 border-b border-gray-300">
+          <div class="card-body">
+            <div class="avatar">
+              <div class="w-12 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                <img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+              </div>
+              <h2 class="card-title px-5">Cat - <span class="text-gray-600">3h</span></h2>
+            </div>
+            <p>If a dog chews shoes whose shoes does he choose?</p>
+          </div>
+          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+          </figure>
+          <div class="btm-nav relative">
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
+            </button>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            </button>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+            </button>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <div class="flex-none w-64 border-l border-gray-300">
+
+      <div class="flex flex-col gap-4 w-52 px-2 py-2">
+        <div class="flex gap-4 items-center">
+          <div class="skeleton w-16 h-16 rounded-full shrink-0"></div>
+          <div class="flex flex-col gap-4">
+            <div class="skeleton h-4 w-28"></div>
+            <div class="skeleton h-4 w-28"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex flex-col gap-4 w-52 px-2 py-2">
+        <div class="flex gap-4 items-center">
+          <div class="skeleton w-16 h-16 rounded-full shrink-0"></div>
+          <div class="flex flex-col gap-4">
+            <div class="skeleton h-4 w-28"></div>
+            <div class="skeleton h-4 w-28"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex flex-col gap-4 w-52 px-2 py-2">
+        <div class="flex gap-4 items-center">
+          <div class="skeleton w-16 h-16 rounded-full shrink-0"></div>
+          <div class="flex flex-col gap-4">
+            <div class="skeleton h-4 w-28"></div>
+            <div class="skeleton h-4 w-28"></div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
 </body>
+
 </html>
