--- a/src/login.html
+++ b/src/login.html
@@ -15,6 +15,27 @@
         <button type="submit">Login</button>
     </form>
 
-    <script src="script/login.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const formData = new FormData(this);
+            fetch('../api/auth/login.php', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data.success) {
+                    alert('Login successful!');
+                } else {
+                    alert('Login failed. Please check your username and password.');
+                }
+            })
+            .catch(error => {
+                //console.error('Error:', error);
+                alert('An error occurred. Please try again later.');
+            });
+        });
+    </script>
 </body>
 </html>
