--- a/src/signup.html
+++ b/src/signup.html
@@ -7,16 +7,39 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form id="loginForm">
+    <form id="signupForm">
         <label for="email">Email:</label>
-        <input type="text" required><br><br>
+        <input type="text" id="email" name="email" required><br><br>
         <label for="fullname">Full Name:</label>
-        <input type="text" required><br><br>
+        <input type="text" id="fullname" name="fullname" required><br><br>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Login</button>
     </form>
+
+    <script>
+        document.getElementById('signupForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const formData = new FormData(this);
+            fetch('../api/auth/signup.php', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data.success) {
+                    alert('Login successful!');
+                } else {
+                    alert('Login failed. Please check your username and password.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred. Please try again later.');
+            });
+        });
+    </script>
 </body>
 </html>
