--- a/src/login.html
+++ b/src/login.html
@@ -25,14 +25,16 @@
             })
             .then(response => response.json())
             .then(data => {
-                if(data.success) {
-                    alert('Login successful!');
+                if (data.success) {
+                    document.cookie = `user_id=${data.user_id}; expires=Thu, 01 Jan 2026 00:00:00 UTC; path=/`;
+
+                    window.location.href = 'home.html';
                 } else {
-                    alert('Login failed. Please check your username and password.');
+                    alert(data.message);
                 }
             })
             .catch(error => {
-                //console.error('Error:', error);
+                console.error('Error:', error);
                 alert('An error occurred. Please try again later.');
             });
         });
