Change to localstorage

--- a/src/home.html
+++ b/src/home.html
@@ -46,6 +46,9 @@
             Create
           </a>
         </li>
+        <li>
+          <button type="submit" onclick="deleteLocalStorageItem()">logout</button>
+        </li>
       </ul>
     </div>
     <div class="flex-auto">
