--- a/src/login.html
+++ b/src/login.html
@@ -6,6 +6,7 @@
     <title>Login</title>
 </head>
 <body>
+    <a href="signup.html">Signup</a>
     <h2>Login</h2>
     <form id="loginForm">
         <label for="username">Username:</label>
@@ -26,7 +27,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    document.cookie = `user_id=${data.user_id}; expires=Thu, 01 Jan 2026 00:00:00 UTC; path=/`;
+                    localStorage.setItem('user_id', data.user_id);
 
                     window.location.href = 'home.html';
                 } else {
