--- a/src/signup.html
+++ b/src/signup.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Login</h2>
+    <a href="login.html">Login</a>
+    <h2>Signup</h2>
     <form id="signupForm">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" required><br><br>
