--- a/src/comment.html
+++ b/src/comment.html
@@ -10,22 +10,24 @@
 <body>
     <div>
     </div>
-    <input type="text" id="sampletext">
+
+    <a href="home.html">X</a>
 
     <div id="comment">
         <ul>
-            <li v-for="item in items" :key="item.id">
-                <label>{{ item.fullname }}</label>
-                <p>{{ item.content }}</p>
-                <a :href="'comment.html?post=' + item.post_id">Comment</a>
+            <li v-for="item in comments" :key="item.id">
+                <label>{{ item.fullname }} - {{ item.created_at }}</label>
+                <p>{{ item.comment_text }}</p>
                 <p class="border-b border-gray-300"></p>
             </li>
         </ul>
-    </div>
+    </div>    
 
     <div>
         <form id="commentme">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type="hidden" id="user_iddd" name="userid">
+            <input type="hidden" id="post_iddd" name="postid">
+            <textarea name="commenttext" id="" cols="30" rows="2"></textarea>
             <button>Comment</button>
         </form>
     </div>
@@ -35,40 +37,42 @@
         window.onload = function() {
           const urlParams = new URLSearchParams(window.location.search);
           const postId = urlParams.get('post');
+          const uId = localStorage.getItem('user_id');
 
-          document.getElementById("sampletext").value = postId;
+          document.getElementById("post_iddd").value = postId;
+          document.getElementById("user_iddd").value = uId;
         
-          if (postId) {
-            const apiUrl = `https://api.example.com/data?post_id=${postId}`;
+        //   if (postId) {
+        //     const apiUrl = `https://api.example.com/data?post_id=${postId}`;
         
-            fetch(apiUrl)
-              .then(response => response.json())
-              .then(data => {
-                console.log(data);
-              })
-              .catch(error => {
-                console.error('Error fetching data:', error);
-              });
-          } else {
-            console.error('No post_id provided in the URL');
-            location.href = "home.html";
-          }
+        //     fetch(apiUrl)
+        //       .then(response => response.json())
+        //       .then(data => {
+        //         console.log(data);
+        //       })
+        //       .catch(error => {
+        //         console.error('Error fetching data:', error);
+        //       });
+        //   } else {
+        //     console.error('No post_id provided in the URL');
+        //     location.href = "home.html";
+        //   }
         };
 
 
-        const userId = localStorage.getItem('user_id');
-        document.getElementById("userid").value = userId;
+        // const userId = localStorage.getItem('user_id');
+        // document.getElementById("userid").value = userId;
 
         document.getElementById('commentme').addEventListener('submit', function(event) {
             event.preventDefault();
             const formData = new FormData(this);
-            fetch('../api/content/post.php', {
+            fetch('../api/comment/comment.php', {
                 method: 'POST',
                 body: formData
             })
             .then(response => response.json())
             .then(data => {
-
+                location.reload();
             })
             .catch(error => {
                 console.error('Error:', error);
