--- a/src/profile.html
+++ b/src/profile.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="lib/profile.js" defer></script>
 </head>
 <body>
     <div id="profile">
         <img src="https://avatars.githubusercontent.com/u/133362311?v=4" alt="profile" width="100" height="100">
-        <label for="name">Test Name</label>
-
+        <label for="name">{{ items[0].fullname }}</label>
     </div>
 </body>
 </html>
