--- a/src/home.html
+++ b/src/home.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="lib/session.js"></script>
   <script src="lib/home.js" defer></script>
+  <script src="lib/nav.js" defer></script>
 </head>
 
 <body>
@@ -37,15 +38,17 @@
             Search
           </a>
         </li>
-        <li>
-          <button onclick="x.showModal()">Create</button>
-        </li>
-        <li>
-          <button type="submit" onclick="deleteLocalStorageItem()">logout</button>
-        </li>
-        <li>
-          <a href="profile.html">Profile</a>
-        </li>
+        <div id="nav">
+          <li>
+            <button onclick="x.showModal()">Create</button>
+          </li>
+          <li>
+            <button type="submit" onclick="deleteLocalStorageItem()">logout</button>
+          </li>
+          <li>
+            <a :href="'profile.html?uid='+uid">Profile</a>
+          </li>
+        </div>
       </ul>
     </div>
     <div class="flex-auto">
