--- a/src/profile.html
+++ b/src/profile.html
@@ -11,6 +11,10 @@
     <div id="profile">
         <img src="https://avatars.githubusercontent.com/u/133362311?v=4" alt="profile" width="100" height="100">
         <label for="name">{{ items[0].fullname }}</label>
+        <!-- <input type="text" v-model="items[0].user_id">
+        <input type="text" v-model="suid"> -->
+
+        <button @click="followMe()">follow</button>
     </div>
 </body>
 </html>
