--- a/src/login.html
+++ b/src/login.html
@@ -19,7 +19,7 @@
     <script>
         const userId = localStorage.getItem('user_id');
         if (userId) {
-            window.location.href = 'home.html';
+            window.location.href = 'index.html';
         }
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
