--- a/src/profile.html
+++ b/src/profile.html
@@ -19,6 +19,10 @@
                 {{ following ? 'Unfollow' : 'Follow' }}
             </button>    
         </div>
+
+        <div>
+            
+        </div>
     </div>
 </body>
 </html>
