--- a/src/login.html
+++ b/src/login.html
@@ -33,7 +33,7 @@
                 if (data.success) {
                     localStorage.setItem('user_id', data.user_id);
 
-                    window.location.href = 'home.html';
+                    window.location.href = 'index.html';
                 } else {
                     alert(data.message);
                 }
