--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,7 @@
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
             const formData = new FormData(this);
-            fetch('../api/auth/login.php', {
+            fetch('../api/auth/login_auth.php', {
                 method: 'POST',
                 body: formData
             })
