--- a/src/profile.html
+++ b/src/profile.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile</title>
+    <script src="lib/session.js" async></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="lib/profile.js" defer></script>
 </head>
 <body>
+  <a href="index.html">Home</a>
     <div id="profile">
         <img src="https://avatars.githubusercontent.com/u/133362311?v=4" alt="profile" width="100" height="100">
         <label for="name">{{ items.fullname }}</label>
