Add search user function

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,13 @@
             <button onclick="x.showModal()">Create</button>
           </li>
           <li>
-            <button type="submit" onclick="signoutUser()">logout</button>
+            <a href="search.html">Search</a>
           </li>
           <li>
             <a :href="'profile.html?uid='+uid">Profile</a>
+          </li>
+          <li>
+            <button type="submit" onclick="signoutUser()">Logout</button>
           </li>
         </div>
       </ul>
