--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <script src="lib/session.js" async></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="lib/home.js" defer></script>
+  <script src="lib/home.js" type="module"></script>
   <script src="lib/nav.js" defer></script>
 </head>
 
