--- a/src/comment.html
+++ b/src/comment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comment</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="lib/session.js" async></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,7 +17,7 @@
     <a href="index.html">X</a>
 
     <div class="flex h-screen overflow-hidden">
-        <div class="flex-auto">
+        <!-- <div class="flex-auto">
             <ul>
                 <li v-for="item in contents" :key="item.id">
                     <label>
@@ -42,7 +43,7 @@
                     </template>
                 </li>
             </ul>
-        </div>
+        </div> -->
     
         <div class="flex-auto">
             <div id="comment">
