--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="flex h-screen overflow-hidden">
+  <div class="flex h-screen">
     <div class="flex-none w-80 border-r border-gray-300">
       <ul class="menu text-2xl place-content-center pt-5">
         <div id="nav">
@@ -34,7 +34,7 @@
         </div>
       </ul>
     </div>
-    <div class="flex-auto">
+    <div class="flex flex-col">
       <div class="navbar bg-base-100 border-b border-gray-300">
         <a class="btn btn-ghost text-lg">Homepage</a>
       </div>
