Modal comment (experimental)

--- a/src/comment.html
+++ b/src/comment.html
@@ -14,9 +14,9 @@
     <div>
     </div>
 
-    <a href="index.html">X</a>
+    <!-- <a href="index.html">X</a> -->
 
-    <div class="flex h-screen overflow-hidden">
+    <!-- <div class="flex h-screen overflow-hidden"> -->
         <!-- <div class="flex-auto">
             <ul>
                 <li v-for="item in contents" :key="item.id">
@@ -45,7 +45,7 @@
             </ul>
         </div> -->
     
-        <div class="flex-auto">
+        <!-- <div class="flex-auto"> -->
             <div id="comment">
                 <ul>
                     <li v-for="item in comments" :key="item.id">
@@ -74,8 +74,8 @@
                     <button>Comment</button>
                 </form>
             </div>
-        </div>
-    </div>
+        <!-- </div> -->
+    <!-- </div> -->
 
     <script>
 
