--- a/src/signin.html
+++ b/src/signin.html
@@ -22,7 +22,7 @@
             <form id="loginForm">
                 <label class="form-control">
                     <div class="label">
-                        <span class="label-text">Email</span>
+                        <span class="label-text">Username</span>
                     </div>
             
                     <input id="username" name="username" class="input input-bordered" />
@@ -31,7 +31,7 @@
                 <label class="form-control">
                     <div class="label">
                         <span class="label-text">Password</span>
-                        <a class="label-text link link-accent">Forgot password?</a>
+                        <!-- <a class="label-text link link-accent">Forgot password?</a> -->
                     </div>
             
                     <input id="password" name="password" type="password" class="input input-bordered" />
