--- a/src/signup.html
+++ b/src/signup.html
@@ -52,7 +52,7 @@
                     <input type="password" id="password" name="password" class="input input-bordered" />
                 </label>
             
-                <div class="form-control">
+                <div class="">
                     <label class="cursor-pointer label self-start gap-2">
                         <input type="checkbox" class="checkbox" required/>
                         <span class="label-text">
